# EMPATHOS

./: .gitignore  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  START_HERE.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DIAGRAMS.md  INDEX.md  ML_INTEGRATION_GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  emotional_api.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/: ActivityTimeline.tsx  Dashboard.tsx  EmotionalStateMeter.tsx  InsightsPanel.tsx  SettingsPanel.tsx
src/lib/context/: EmotionalStateContext.tsx
src/lib/detectors/: behavioral.ts  facial.ts  index.ts  vocal.ts  wearable.ts
src/lib/engine/: orchestration.ts  state-modeling.ts
src/styles/: globals.css
src/types/: index.ts
